# cinema

./: .gitignore  docker-compose.yml  env.example  liara.json  pyproject.toml  requirements.txt
apps/cinema/: admin.py  api.py  cinema_mixins.py  models.py  serializers.py  services.py
apps/cinema/migrations/: 0001_initial.py
apps/cinema/templates/cinema/: ticket.html
apps/cinema/templatetags/: cinema_tags.py
config/: settings.py  urls.py
pages/: views.py
pages/templates/pages/: home.html
pages/templates/pages/components/: date_picker.html  movies.html  rating.html  user_modal.html
templates/: base.html
templates/components/: annimated_text.html  nav.html  toast.html
